<resources>
    <string name="app_name">login</string>

    <string name="login_title">登录</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_register">新用户注册</string>
    <string name="login_hint_account">请输入手机号</string>
    <string name="login_hint_password">请输入您的密码</string>
    <string name="login_btn">登录</string>
    <string name="login_error_1">手机号不能为空</string>
    <string name="login_error_2">密码不能为空</string>
    <string name="login_error_4">密码错误请重新输入</string>
    <string name="login_error_5" >手机号输入有误</string>
    <string name="login_account">账号不存在</string>

    <string name="register_title">注册</string>
    <string name="register_send_sms_code">获取验证码</string>
    <string name="register_hint_account">请输入手机号</string>
    <string name="register_hint_sms_code">请输入验证码</string>
    <string name="register_hint_password">请输入8–20位数字与字母结合的密码</string>
    <string name="register_hint_invite">请输入邀请码</string>
    <string name="register_btn">注册</string>
    <string name="register_error_1">手机号不能为空</string>
    <string name="register_error_2">验证码不能为空</string>
    <string name="register_error_3">密码不能为空</string>
    <string name="register_error_5">验证码输入有误</string>
    <string name="register_error_6">密码输入有误</string>
    <string name="register_error_7">邀请码不能为空</string>
    <string name="register_error_8">请先阅读用户协议</string>
    <string name="register_user_1">我已经阅读并同意</string>
    <string name="register_user_2"> 用户协议</string>
    <string name="login_success">登录成功</string>
    <string name="regist_success">注册成功</string>

    <string name="forget_login_psw_title">忘记密码</string>
    <string name="forget_login_psw_send_sms_code">获取验证码</string>
    <string name="forget_login_psw_hint_account">请输入您的手机号</string>
    <string name="forget_login_psw_hint_sms_code">请输入验证码</string>
    <string name="forget_login_psw_hint_password">请输入密码</string>
    <string name="forget_login_psw_hint_password_again">请再次输入密码</string>
    <string name="forget_login_psw_btn">提交</string>
    <string name="forget_login_psw_error_1">手机号不能为空</string>
    <string name="forget_login_psw_error_2">验证码不能为空</string>
    <string name="forget_login_psw_error_3">密码不能为空</string>
    <string name="forget_login_psw_error_5">验证码输入有误</string>
    <string name="forget_login_psw_error_6">密码输入有误</string>
    <string name="forget_login_psw_error_7">您输入的密码两次不一致</string>
    <string name="forget_login_psw_success">修改成功</string>

    <string name="password_setting_title">密码设置</string>
    <string name="password_setting_modify_login">修改登录密码</string>
    <string name="password_setting_modify_pay">修改资金密码</string>
    <string name="password_setting_modify_pay_psw">修改资金密码</string>
    <string name="password_setting_setting_pay_psw">设置资金密码</string>

    <string name="modify_login_psw_title">修改登录密码</string>
    <string name="modify_login_psw_send_sms_code">获取验证码</string>
    <string name="modify_login_psw_hint_sms_code">请输入验证码</string>
    <string name="modify_login_psw_hint_old_password">请输入旧密码</string>
    <string name="modify_login_psw_hint_new_password">请输入新密码</string>
    <string name="modify_login_psw_hint_new_password_again">请再次输入密码</string>
    <string name="modify_login_psw_btn">确定</string>
    <string name="modify_login_psw_error_1">验证码不能为空</string>
    <string name="modify_login_psw_error_2">旧密码不能为空</string>
    <string name="modify_login_psw_error_3">新密码不能为空</string>
    <string name="modify_login_psw_error_4">您输入的密码两次不一致</string>
    <string name="modify_login_psw_error_5">验证码输入有误</string>
    <string name="modify_login_psw_error_6">旧密码输入有误</string>
    <string name="modify_login_psw_error_7">新密码输入有误</string>

    <string name="modify_pay_psw_title">修改资金密码</string>
    <string name="modify_pay_psw_send_sms_code">获取验证码</string>
    <string name="modify_pay_psw_hint_sms_code">请输入验证码</string>
    <string name="modify_pay_psw_hint_password">请输入新密码</string>
    <string name="modify_pay_psw_hint_password_again">请再次输入密码</string>
    <string name="modify_pay_psw_btn">确定</string>
    <string name="modify_pay_psw_error_1">验证码不能为空</string>
    <string name="modify_pay_psw_error_2">密码不能为空</string>
    <string name="modify_pay_psw_error_3">您输入的密码两次不一致</string>
    <string name="modify_pay_psw_error_4">验证码输入有误</string>
    <string name="modify_pay_psw_error_5">密码输入有误</string>

    <string name="setting_pay_psw_title">设置资金密码</string>
    <string name="setting_pay_psw_hint_password">请输入密码</string>
    <string name="setting_pay_psw_hint_password_again">请再次输入密码</string>
    <string name="setting_pay_psw_btn">确定</string>
    <string name="setting_pay_psw_error_1">密码不能为空</string>
    <string name="setting_pay_psw_error_2">您输入的密码两次不一致</string>
    <string name="setting_pay_psw_error_3">密码输入有误</string>

    <string name="select_county_save">保存</string>
    <string name="select_county_title">国家和地区</string>

</resources>
