<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBack"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/register_selector_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="+86"
            android:textColor="@color/colorMain"
            android:textSize="14dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/register_selector_phone"
            android:background="#E5E5E5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/register_account_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/register_selector_phone"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/register_hint_account"
            android:inputType="phone"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/register_sms_code_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/register_hint_sms_code"
            android:inputType="phone"
            android:maxLength="6"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/register_send_sms_code"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/forget_login_psw_send_sms_code"
            android:textColor="@color/colorMainText"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/register_password_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/password"
            android:gravity="center_vertical"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />

        <CheckBox
            android:id="@+id/register_password_eye"
            android:layout_width="22dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:button="@drawable/selector_password" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/register_invite_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/register_hint_invite"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/register_check_btn"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/selector_check_community"
            android:button="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/register_user_1"
            android:textColor="#999999"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_user_2"
            android:textColor="#ff4400"
            android:textSize="12dp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:background="@drawable/selector_btn_big"
        android:gravity="center"
        android:text="@string/register_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18dp" />

</LinearLayout>
