<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBack"
    android:orientation="vertical"
    tools:context="com.xxx.login.ui.activity.ForgetLoginPswActivity">

    <ImageButton
        android:id="@+id/forget_login_psw_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorTransparent"
        android:src="@mipmap/login_return" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="31dp"
        android:text="@string/forget_login_psw_title"
        android:textColor="@color/colorMain"
        android:textSize="24dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/forget_login_psw_selector_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="+86"
            android:textColor="@color/colorMain"
            android:textSize="14dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/forget_login_psw_selector_phone"
            android:background="#E5E5E5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/forget_login_psw_account_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/forget_login_psw_selector_phone"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/forget_login_psw_hint_account"
            android:inputType="phone"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/forget_login_psw_sms_code_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/forget_login_psw_hint_sms_code"
            android:inputType="phone"
            android:maxLength="6"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/forget_login_psw_send_sms_code"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/forget_login_psw_send_sms_code"
            android:textColor="@color/colorMainText"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/forget_login_psw_password_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/password"
            android:gravity="center_vertical"
            android:hint="@string/forget_login_psw_hint_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />

        <CheckBox
            android:id="@+id/forget_login_psw_password_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:button="@drawable/selector_password" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/forget_login_psw_password_again_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/password"
            android:gravity="center_vertical"
            android:hint="@string/forget_login_psw_hint_password_again"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />

        <CheckBox
            android:id="@+id/forget_login_psw_password_again_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:button="@drawable/selector_password" />

    </RelativeLayout>

    <TextView
        android:id="@+id/forget_login_psw_btn"
        android:layout_width="340dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:background="@drawable/shape_btn_big_false"
        android:gravity="center"
        android:text="@string/forget_login_psw_btn"
        android:textColor="#FFFFFF"
        android:textSize="18dp" />

</LinearLayout>
