<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBack"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="65dp">

        <TextView
            android:id="@+id/login_selector_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="+86"
            android:textColor="@color/colorMain"
            android:textSize="14dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/login_selector_phone"
            android:background="#E5E5E5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/login_account_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/login_selector_phone"
            android:background="@null"
            android:hint="@string/login_hint_account"
            android:inputType="phone"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#E5E5E5" />

        <EditText
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/password"
            android:gravity="center_vertical"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="14dp" />

        <CheckBox
            android:id="@+id/login_password_eye"
            android:layout_width="22dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:button="@drawable/selector_password" />

    </RelativeLayout>

    <TextView
        android:id="@+id/login_forger_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="42dp"
        android:layout_marginTop="13dp"
        android:text="@string/login_forget"
        android:textColor="@color/colorMain"
        android:textSize="12dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:background="@drawable/selector_btn_big"
        android:gravity="center"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="18dp" />

</LinearLayout>
